重名名修复图标

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>管理后台-sunklmy-manager</title>
+    <title>管理后台</title>
     <!--导入layui css文件-->
     <link rel="stylesheet" href="/static/plugins/layui/css/layui.css">
     <!--导入layui js文件-->
@@ -19,7 +19,7 @@
 <body class="layui-layout-body">
     <div class="layui-layout layui-layout-admin">
         <div class="layui-header">
-            <div class="layui-logo">SunklMy 管理后台</div>
+            <div class="layui-logo">SP-LY 管理后台</div>
             <!-- 头部区域（可配合layui已有的水平导航） -->
             <!--<ul class="layui-nav layui-layout-left">
                 <li class="layui-nav-item"><a href="">控制台</a></li>
@@ -70,7 +70,7 @@
 
         <div class="layui-footer">
             <!-- 底部固定区域 -->
-            © sunklmy.com 由<a href="https://www.layui.com/">layui</a>提供界面支持
+            © Ly.com 由<a href="https://www.layui.com/">layui</a>提供界面支持
     </div>
     </div>
 </body>
