--- a/src/main/resources/templates/manager/vip-manager.html
+++ b/src/main/resources/templates/manager/vip-manager.html
@@ -21,7 +21,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                    <tr th:each="list:${vip_codes}">
+                    <tr th:each="list:${vipCodes}">
                         <td th:text="${list.code}"></td>
                     </tr>
                 </tbody>
