--- a/src/main/resources/templates/authentication/register_input.html
+++ b/src/main/resources/templates/authentication/register_input.html
@@ -1,19 +1,16 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8" %>
-<%@include file="/WEB-INF/jsp/pub/include.jsp" %>
-<%
-    String path = request.getContextPath();
-    String basePath = request.getScheme() + "://" + request.getServerName() + ":" + request.getServerPort() + path + "/";
-%>
-<c:set var="prourl" value="<%=basePath%>"></c:set>
-<c:set var="proname" value="${pageContext.request.contextPath}"></c:set>
 <!DOCTYPE HTML>
-<html lang="en"><head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      th:with="
+      version=${#dates.createNow().getTime()},
+      prourl=${#request.getScheme() + '://' + #request.getServerName() + ':' + #request.getServerPort() + #request.getContextPath() + '/'},
+      proname=${#request.getContextPath()}">
+<head>
     <meta charset="UTF-8">
     <title>注册</title>
     <base href="<%=basePath%>">
-    <jsp:include page="/WEB-INF/jsp/pub/head_meta.jsp"/>
-    <jsp:include page="/WEB-INF/jsp/pub/head_link.jsp"/>
-    <jsp:include page="/WEB-INF/jsp/pub/head_script.jsp"/>
+    <div th:replace="pub/head_meta"/>
+    <div th:replace="pub/head_link"/>
+    <div th:replace="pub/head_script"/>
     <!--=====================CSS_Link===========================-->
 <body>
 <div class="container">
@@ -43,9 +40,9 @@
         <a href="javascript:;" class="btn" onclick="history.back();">返回</a>
     </form>
 </div>
-<script type="text/javascript" src="plugins/register/js/script.js?v=${v}"></script>
+<script type="text/javascript" th:src="@{/static/plugins/register/js/script.js(v=${version})}"></script>
 <script type="text/javascript">
-    window.register_path = "register.html";
+    window.register_path = "/register.html";
     window.head_page_path = "/";
 </script>
 </body>
