--- a/src/main/resources/templates/manager/catalog.html
+++ b/src/main/resources/templates/manager/catalog.html
@@ -19,7 +19,7 @@
                 <a href="javascript:;" class="add_CataLog_btn btn">添加</a><br/><br/>
 
                 <span>二级子分类</span>
-                <select class="cataLog_id">
+                <select class="cataLogId">
                    <option th:each="cataLogList_var:${cataLogList}" th:value="${cataLogList_var.id}" th:text="${cataLogList_var.name}"></option>
                 </select>
                 <br/>
@@ -27,10 +27,10 @@
                 <a href="javascript:;" class="add_SubClass_btn btn">添加</a><br/><br/>
 
                 <span>类型</span><br/>
-                <select class="cataLog_id_subClass">
+                <select class="cataLogId_subClass">
                     <option th:each="cataLogList_var:${cataLogList}" th:value="${cataLogList_var.id}" th:text="${cataLogList_var.name}"></option>
                 </select>
-                <select class="subClass_id"></select><br/>
+                <select class="subClassId"></select><br/>
                 <div contenteditable="true" class="type_name" style="display: inline-block;"></div>
                 <a href="javascript:;" class="add_Type_btn btn">添加</a><br/><br/>
                 <br/>
@@ -69,14 +69,18 @@
                 <h2>地区-->级别-->年代</h2>
                 <br/>
                 <span>地区--></span>
-                <span th:each="locList_list:${locList}" th:text="${locList_list.name}"></span>
+                <span th:each="locList_list:${locList}" th:text="${locList_list.name}+'&nbsp;&nbsp;&nbsp;'"></span>
                 <br/>
                 <span>级别--></span>
-                <span th:each="levelList_list:${levelList}" th:text="${levelList_list.name}"></span>
+                <span th:each="levelList_list:${levelList}" th:text="${levelList_list.name}+'&nbsp;&nbsp;&nbsp;'"></span>
                 <br/>
 
-                <span>年代--></span>
-                <span th:each="decadeList_list:${decadeList}" th:text="${decadeList_list.name}"></span>
+                <span>年代--></span><br/>
+                <span th:each="decadeList_list:${decadeList}">
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span  th:text="${decadeList_list.name}"></span>
+                    <br/>
+                </span>
+
                 <br/>
             </div>
         </div>
