--- a/src/main/resources/templates/index/pc.html
+++ b/src/main/resources/templates/index/pc.html
@@ -1,18 +1,16 @@
-<%@ page import="java.util.Date" %>
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8" %>
-<%@include file="/WEB-INF/jsp/pub/include.jsp" %>
-<%
-    String path = request.getContextPath();
-    String basePath = request.getScheme() + "://" + request.getServerName() + ":" + request.getServerPort() + path + "/";
-%>
-<c:set var="prourl" value="<%=basePath%>"></c:set>
-<c:set var="proname" value="${pageContext.request.contextPath}"></c:set>
-<!DOCTYPE HTML>
-<html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      th:with="
+      version=${#dates.createNow().getTime()},
+      prourl=${#request.getScheme() + '://' + #request.getServerName() + ':' + #request.getServerPort() + #request.getContextPath() + '/'},
+      proname=${#request.getContextPath()},
+      pageurl=@{/xl/index.html}"
+>
+<head>
     <meta charset="UTF-8">
     <title>what?</title>
-    <base href="<%=basePath%>">
-    <script src="public/static/js/download/base64.js?v=${version}"></script>
+    <base th:href="${prourl}">
+    <script th:src="@{/static/js/download/base64.js(v=${version})}"></script>
     <style>
         html,body{
             padding: 0px;
@@ -26,7 +24,7 @@
         }
     </style>
 <body>
-<script type="text/javascript" src="plugins/ckplayer/ckplayer.js?v=${version}"></script>
+<script type="text/javascript" th:src="@{/static/plugins/ckplayer/ckplayer.js(v=${version})}"></script>
 <div id="video"></div>
 <script type="text/javascript">
     var videoObject = {
